--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body{
 position: absolute;
 width: 300px;
 height: 380px;
-background-image: url('fingerPrint_01.png');
+background-image: url('./images/fingerPrint_01.png');
 background-size: 300px;
 margin-top: -207px;
 }
@@ -35,7 +35,7 @@ margin-top: -207px;
     height: 100%;
     width:100%;
     left: 0%;
-    background-image: url('fingerPrint_02.png');
+    background-image: url('./images/fingerPrint_02.png');
 background-size: 300px;
 animation: animate 4s ease-in-out infinite;
 
